--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "add-to-calendar-button": "^1.2.0",
     "bootstrap": "^5.1.3",
     "mdbreact": "^5.2.0",
     "react": "^17.0.2",
