--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "add-to-calendar-button": "^1.2.0",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.6.0",
     "mdbreact": "^5.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
