--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-FAST_REFRESH=false
-CHOKIDAR_USEPOLLING=true
-NPM_CONFIG_PRODUCTION=false
+DB_CONNECTION=mongodb+srv://kristin:testdatabase1@cluster0.rrams.mongodb.net/test
