--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "google-maps-react": "^2.0.6",
-    "mongoose": "^6.0.14",
-    "nodemon": "^2.0.15"
+    "mongoose": "^6.0.14"
   }
 }
